# m.net

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: deps.cmake  mac.cmake  platform.cmake  target.cmake
res/: Info.plist  Info.plist.in
src/: CMakeLists.txt  MacNotification.h  MacNotification.mm  Network.cc  Network.h  Stats.cc  Stats.h  TrayIcon.cc  TrayIcon.h  Version.h  main.cc
tests/: CMakeLists.txt  dummy.cc  test.cc
