CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(mnet)

SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE)

SET(CMAKE_AUTOMOC ON) # moc 
SET(CMAKE_AUTORCC ON) # rcc

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

ADD_EXECUTABLE(mnet "src/main.cc")